--- a/src/components/ASTVisualization.css
+++ b/src/components/ASTVisualization.css
@@ -23,7 +23,7 @@
 }
 
 .comment-tooltip-header {
-  color: #3b6cff;
+  color: #4d78ff;
   border-bottom: 1px solid var(--border-color);
   padding-bottom: 5px;
   font-family: 'Lexend', sans-serif;
