--- a/src/components/CFGVisualization.css
+++ b/src/components/CFGVisualization.css
@@ -5,6 +5,7 @@
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
+  position: relative;
 }
 
 .cfg-container:active {
